# hf-max22200-driver

./: .gitignore  404.html  CMakeLists.txt  CONTRIBUTING.md  Makefile  README.md  index.html  lychee.toml  version_selector.html
development/: CMakeLists.txt  README.md  feed.xml  index.html  lychee.toml  robots.txt  sitemap.xml  version_info.json
development/api/: MAX22200ComprehensiveTest_8cpp.html  MAX22200ComprehensiveTest_8cpp.js  MAX22200ComprehensiveTest_8cpp__incl.map  MAX22200ComprehensiveTest_8cpp__incl.md5  MAX22200_8cpp.html  MAX22200_8cpp__dep__incl.md5  MAX22200_8h.html  MAX22200_8h__dep__incl.md5  MAX22200_8h__incl.map  MAX22200_8h_source.html  MAX22200__Registers_8h__dep__incl.map  MAX22200__Registers_8h_source.html  MAX22200__Types_8h.html  MAX22200__Types_8h__dep__incl.map  MAX22200__Types_8h__dep__incl.md5  README_8md.html  SPIInterface_8h.html  SPIInterface_8h_source.html  TestFramework_8h__dep__incl.map  TestFramework_8h_source.html  advanced_2utility-scripts_2index_8md.html  annotated.html  annotated_dup.js  c21__cycle__test_8cpp.js  c21__cycle__test_8cpp__incl.map  classEsp32Max22200Spi-members.html  classEsp32Max22200SpiBus-members.html  classEsp32Max22200SpiBus.html  classEsp32Max22200SpiBus.js  classMAX22200_1_1MAX22200-members.html  classMAX22200_1_1MAX22200.html  classMAX22200_1_1MAX22200.js  classSPIInterface.html  classes.html  classmax22200_1_1MAX22200-members.html  classmax22200_1_1MAX22200.html  classmax22200_1_1SpiInterface.html  configuration_2index_8md.html  dir_000000_000002.html  dir_000002_000004.html  (+164 more)
development/api/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_1d.js  all_1e.js  all_1f.js  all_2.js  all_20.js  all_21.js  all_23.js  all_26.js  all_28.js  all_2b.js  all_2f.js  all_3.js  all_30.js  all_35.js  all_37.js  all_39.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_1.js  classes_2.js  (+56 more)
development/assets/js/: just-the-docs.js  search-data.json
development/cmake/: hf_max22200Config.cmake.in
development/docs/: API_Reference.html  API_Reference.md  ASCII_Diagrams.html  Hardware_Guide.html  Hardware_Guide.md  api_reference.html  api_reference.md  configuration.html  configuration.md  examples.html  examples.md  hardware_setup.html  hardware_setup.md  index.html  installation.html  installation.md  platform_integration.html  platform_integration.md  quickstart.html  spi_protocol_analysis.html  troubleshooting.html  troubleshooting.md
development/docs/cmake_integration/: index.html
development/docs/configuration/: index.html
development/docs/examples/: index.html
development/docs/hardware_setup/: index.html
development/docs/html/: Basic-example.html  Enable-example.html  MAX22200ComprehensiveTest_8cpp.html  MAX22200ComprehensiveTest_8cpp__incl.md5  MAX22200_8cpp.html  MAX22200_8cpp.js  MAX22200_8cpp__incl.map  MAX22200_8cpp__incl.md5  MAX22200_8h.html  MAX22200_8h__incl.md5  MAX22200_8h_source.html  MAX22200__Registers_8h.html  MAX22200__Types_8h.js  MAX22200__Types_8h__dep__incl.map  MAX22200__Types_8h_source.html  README_8md.html  SPIInterface_8h.html  SPIInterface_8h__dep__incl.md5  SPIInterface_8h__incl.map  TestFramework_8h.html  TestFramework_8h_source.html  annotated.html  annotated_dup.js  c21__cycle__test_8cpp.html  c21__cycle__test_8cpp.js  c21__cycle__test_8cpp__incl.md5  c21__dpm__tuning__test_8cpp.html  c21__dpm__tuning__test_8cpp.js  c21__dpm__tuning__test_8cpp__incl.map  ci-integration-patterns_8md.html  ci-pipeline_2index_8md.html  classEsp32Max22200Spi.html  classEsp32Max22200Spi.js  classEsp32Max22200SpiBus.html  classEsp32Max22200SpiBus.js  classMAX22200_1_1MAX22200.html  classMAX22200_1_1SPIInterface.html  classSPIInterface-members.html  classSPIInterface.js  classes.html  (+169 more)
development/docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_1b.js  all_1c.js  all_1d.js  all_1f.js  all_2.js  all_22.js  all_23.js  all_27.js  all_38.js  all_3a.js  all_3c.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_3.js  classes_5.js  classes_6.js  classes_7.js  defines_0.js  enums_0.js  enums_1.js  (+40 more)
development/docs/installation/: index.html
development/docs/platform_integration/: index.html
development/docs/quickstart/: index.html
development/docs/troubleshooting/: index.html
development/doxs/development/: Basic-example.html  Channel-pair-example.html  Fast-example.html  MAX22200ComprehensiveTest_8cpp__incl.map  MAX22200ComprehensiveTest_8cpp__incl.md5  MAX22200_8cpp.html  MAX22200_8cpp__dep__incl.map  MAX22200_8cpp__incl.map  MAX22200_8cpp__incl.md5  MAX22200_8h.html  MAX22200_8h.js  MAX22200_8h__dep__incl.map  MAX22200_8h__dep__incl.md5  MAX22200_8h__incl.map  MAX22200_8h_source.html  MAX22200__Registers_8h.html  MAX22200__Registers_8h.js  MAX22200__Registers_8h__dep__incl.md5  MAX22200__Registers_8h__incl.map  MAX22200__Types_8h.html  MAX22200__Types_8h__incl.md5  MAX22200__Types_8h_source.html  SPIInterface_8h.html  SPIInterface_8h__incl.map  SPIInterface_8h__incl.md5  SPIInterface_8h_source.html  TestFramework_8h.html  TestFramework_8h__dep__incl.map  TestFramework_8h__dep__incl.md5  TestFramework_8h_source.html  Turn-example.html  advanced_2port-detection_2index_8md.html  annotated.html  annotated_dup.js  c21__dpm__tuning__test_8cpp__incl.md5  classEsp32Max22200Spi-members.html  classEsp32Max22200Spi.html  classEsp32Max22200SpiBus-members.html  classEsp32Max22200SpiBus.html  classEsp32Max22200SpiBus.js  (+191 more)
development/doxs/development/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_16.js  all_17.js  all_19.js  all_1a.js  all_1b.js  all_1f.js  all_2.js  all_20.js  all_21.js  all_24.js  all_29.js  all_2a.js  all_2c.js  all_2e.js  all_3.js  all_32.js  all_34.js  (+70 more)
development/examples/esp32/: CMakeLists.txt  README.md  app_config.yml  index.html  sdkconfig
(+409 files in other folders)
